--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,48 @@
 body {
-    margin: 0;
-    overflow: hidden;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    height: 100vh;
-    background-color: black;
+  margin: 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  height: 100vh;
+  background-color: black;
 }
 
 .particleButtons {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 20px;
-  }
-  
-  .particleButton {
-    margin-bottom: 10px;
-    padding: 10px 20px;
-    background-color: #3498db;
-    border: none;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .particleButton:hover {
-    background-color: #2980b9;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+}
+
+.particleButton {
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  background-color: #3498db;
+  border: none;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.particleButton:hover {
+  background-color: #2980b9;
+}
+
+
+.electron {
+  background-color: #0000ff;
+}
+
+.proton {
+  background-color: #ff0000;
+}
+
+.neutrino {
+  background-color: #00ff00;
+}
+
+.photon {
+  background-color: #ffff00;
+}
