--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,21 @@ body {
   justify-content: left;
   align-items: center;
   height: 100vh;
-  background-color: black
+  background-color: black;
+  position: relative; /* Adicione essa linha para definir o contexto de posicionamento */
 }
 
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../assets/detector.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
 
 .particleButtons {
   display: flex;
@@ -34,8 +46,9 @@ body {
 
 .footer {
   color: white;
+  background-color: rgba(0, 0, 0, 0.7);
   text-align: center;
-  padding: 10px;
+  padding: 0px;
   position: fixed;
   bottom: 0;
   width: 100%;
