--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
 .particleButton {
   margin-bottom: 10px;
   padding: 10px 30px;
-  background-color: #3498db;
+  background-color: rgb(77, 75, 75);
   border: none;
   color: white;
   font-size: 16px;
