--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  background-image: url('../assets/detector.png');
   background-size: cover;
   background-repeat: no-repeat;
   z-index: -1;
